--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
   <body>
     <h1 id="title">TV Show Episodes</h1>
+      <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Enter TV Show Name">
+        <button onclick="searchShow()">Search</button>
+    </div>
+    
     <p id="episode-count"></p>
     <div id="root"></div>
 
