apply some changes to my work

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <input type="text" id="searchInput" placeholder="Enter TV Show Name">
         <button onclick="searchShow()">Search</button>
     </div>
+    <label for="showSelect">Select Show:</label>
+    <!-- <select id="showSelect"></select> -- will be added dynamically -->
+
+  <label for="searchInput">Search Episodes:</label>
+  <input type="text" id="searchInput" placeholder="Search episodes..." />
+
     
     <p id="episode-count"></p>
     <div id="root"></div>
