i have implemented my functions of the tv app

--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <title>TV Show Project | Loveth (loveth900)</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+
   </head>
 
   <body>
-    <h1 id="title">TV Show Episodes</h1>
+    <h1 id="title">TV Show </h1>
       <div class="search-container">
         <input type="text" id="searchInput" placeholder="Enter TV Show Name">
         <button onclick="searchShow()">Search</button>
     </div>
     <label for="showSelect">Select Show:</label>
     <!-- <select id="showSelect"></select> -- will be added dynamically -->
-
-  <label for="searchInput">Search Episodes:</label>
-  <input type="text" id="searchInput" placeholder="Search episodes..." />
-
     
     <p id="episode-count"></p>
     <div id="root"></div>
